--- a/src/Website/style.css
+++ b/src/Website/style.css
@@ -1,3 +1,7 @@
+.mainpage{
+  width: 100%;
+  height: 100%;
+}
 .input{
   height: 50px;
   width: 300px;
@@ -8,6 +12,7 @@
   padding: 10px;
 
 }
+
 .input::placeholder{
   color: black
 }
