--- a/src/Website/templates/template/website.html
+++ b/src/Website/templates/template/website.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Website Name</title>
     <link rel="stylesheet" href="style.css" />
-    <div class="container">
-
-      <input class="input" type="search" placeholder="Search..." />
-      <div class="search"></div>
-      
-    </div>
   </head>
+
+  <body>
+    <div class="title">
+      <span>S</span>
+      <span>I</span>
+      <span>T</span>
+      <span>E</span>
+    </div>
+
+    <script src="index.js"></script>
+  </body>
 </html>
