--- a/src/Website/templates/template/website.html
+++ b/src/Website/templates/template/website.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Website Name</title>
-    <link rel="stylesheet" href="style.css"/>
   </head>
 
   <body>
