color theme and css file editied

--- a/src/Website/templates/static/style.css
+++ b/src/Website/templates/static/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
   margin: 0;
-  background: #141718;
+  background: #32292f;
   overflow: hidden;
   padding: 30px;
 }
@@ -47,6 +47,15 @@ body {
   font-weight: 100;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #70abaf;
+  color: #32292f;
+  text-align: center;
+}
 
 @keyframes floating {
   0% {
