--- a/src/Website/templates/template/website.html
+++ b/src/Website/templates/template/website.html
@@ -16,6 +16,10 @@
       <span>E</span>
     </div>
 
+    <div class="footer">
+      <p>Footer</p>
+    </div>
+    
     <script src="index.js"></script>
   </body>
 </html>
