--- a/src/Website/templates/template/website.html
+++ b/src/Website/templates/template/website.html
@@ -5,15 +5,25 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Website Name</title>
+    <title>Pirates Creek</title>
   </head>
 
   <body>
     <div class="title">
-      <span>S</span>
-      <span>I</span>
+      <span>P</span>
+      <span>R</span>
+      <span>A</span>
       <span>T</span>
       <span>E</span>
+      <span>'</span>
+      <span>S</span>
+      <span>C</span>
+      <span>R</span>
+      <span>E</span>
+      <span>E</span>
+      <span>K</span>
+
+
     </div>
 
     <div class="footer">
