--- a/src/Website/templates/static/style.css
+++ b/src/Website/templates/static/style.css
@@ -42,6 +42,36 @@ body {
 .title span:nth-child(4) {
   animation-delay: 4s;
 }
+.title span:nth-child(5) {
+  animation-delay: 5s;
+}
+.title span:nth-child(6) {
+  animation-delay: 6s;
+}
+.title span:nth-child(7) {
+  animation-delay: 7s;
+}
+.title span:nth-child(8) {
+  animation-delay: 8s;
+}
+.title span:nth-child(9) {
+  animation-delay: 9s;
+}
+.title span:nth-child(10) {
+  animation-delay: 10s;
+}
+.title span:nth-child(11) {
+  animation-delay: 11s;
+}
+  animation-delay: 12s;
+}
+.title span:nth-child(13) {
+  animation-delay: 13s;
+}
+
+
+
+
 
 .title span:hover {
   font-weight: 100;
