--- a/src/Website/templates/template/website.html
+++ b/src/Website/templates/template/website.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Pirates Creek</title>
+    <title>Pirate's Creek</title>
   </head>
 
   <body>
     <div class="title">
       <span>P</span>
+      <span>I</span>
       <span>R</span>
       <span>A</span>
       <span>T</span>
