--- a/src/Website/templates/static/style.css
+++ b/src/Website/templates/static/style.css
@@ -52,26 +52,30 @@ body {
   animation-delay: 7s;
 }
 .title span:nth-child(8) {
-  animation-delay: 8s;
+  animation-delay: 6s;
 }
 .title span:nth-child(9) {
-  animation-delay: 9s;
+  animation-delay: 5s;
 }
 .title span:nth-child(10) {
-  animation-delay: 10s;
+  animation-delay: 4s;
 }
 .title span:nth-child(11) {
-  animation-delay: 11s;
+  animation-delay: 3s;
 }
 .title span:nth-child(12) {
-  animation-delay: 12s;
+  animation-delay: 2s;
 }
 .title span:nth-child(13) {
-  animation-delay: 13s;
+  animation-delay: 1s;
 }
 
 .title span:hover {
   font-weight: 100;
+}
+
+.spacer{
+  width: 20px;
 }
 
 .footer {
