--- a/src/Website/templates/template/website.html
+++ b/src/Website/templates/template/website.html
@@ -18,6 +18,7 @@
       <span>E</span>
       <span>'</span>
       <span>S</span>
+      <div class="spacer"> </div>
       <span>C</span>
       <span>R</span>
       <span>E</span>
