--- a/src/Website/templates/template/website.html
+++ b/src/Website/templates/template/website.html
@@ -24,12 +24,24 @@
       <span>E</span>
       <span>E</span>
       <span>K</span>
-
-
     </div>
 
+          
+      <div class="wrap">
+        <div class="search">
+            <input type="text" class="searchTerm" placeholder="What are you looking for?">
+            <button type="submit" class="searchButton">
+              <i class="fa fa-search"></i>
+          </button>
+        </div>
+      </div>
+
+
     <div class="footer">
-      <p>Footer</p>
+      <span>Contact Us</span>
+      <p>""discord server link here ""[Discord]</p>
+      <p>u/ramjithunder24 or u/Riffle_X [Reddit DMs]</p>
+      
     </div>
     
     <script src="index.js"></script>
