--- a/src/Website/templates/static/style.css
+++ b/src/Website/templates/static/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
   margin: 0;
-  background: #70ABAF;
+  background: #1A3A3A;
   overflow: hidden;
   padding: 30px;
 }
@@ -80,12 +80,53 @@ body {
 
 .footer {
   position: fixed;
+  font-size: 4px;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #70abaf;
-  color: #32292f;
+  background-color: #4F517D;
+  color: #DCCFEC;
   text-align: center;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #fae8e0;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #4F517D;
+}
+
+.searchTerm:focus{
+  color: #4F517D;
+}
+
+.searchButton {
+  width: 36px;
+  height: 36px;
+  border: 1px solid #fae8e0;
+  text-align: center; 
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+  color: #4F517D;
+}
+
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @keyframes floating {
