--- a/src/Website/templates/template/website.html
+++ b/src/Website/templates/template/website.html
@@ -26,16 +26,14 @@
       <span>K</span>
     </div>
 
-          
       <div class="wrap">
         <div class="search">
             <input type="text" class="searchTerm" placeholder="What are you looking for?">
             <button type="submit" class="searchButton">
               <i class="fa fa-search"></i>
-          </button>
+          </button>i
         </div>
       </div>
-
 
     <div class="footer">
       <span>Contact Us</span>
