--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -26,12 +26,12 @@
 			<span>K</span>
 		</div>
 
-		<form class="grid" action = "/result" method = "POST">
+		<form class="searchCover" action = "/result" method = "POST">
 			<center>
 			</cetner>
-			
-			<label></label>	
-
+			<input type="text" name="search" class="search" placeholder="What are you looking for?">	
+			<input type="Submit" class = "searchBarSubmit">
+		</form>
 		</form>
 
 		<div class="wrap">
