--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -25,23 +25,13 @@
 			<span>E</span>
 			<span>K</span>
 		</div>
+		<center class="searchWrap">
+			<form class="searchCover" action = "/result" method = "POST">
+				<input type="text" name="search" class="searchTerm" placeholder="What are you looking for?">	
+				<input type="Submit" class = "searchButton" value="">
+			</form>
+		</center>
 
-		<form class="searchCover" action = "/result" method = "POST">
-			<center>
-			</cetner>
-			<input type="text" name="search" class="search" placeholder="What are you looking for?">	
-			<input type="Submit" class = "searchBarSubmit">
-		</form>
-		</form>
-
-		<div class="wrap">
-			<div class="search">
-				<input type="text" class="searchTerm" placeholder="What are you looking for?">
-				<button type="submit" class="searchButton">
-					<i class="fa fa-search"></i>
-				</button>i
-			</div>
-		</div>
 
 		<div class="footer">
 			<span>Contact Us</span>
