finsihed html for toggler
@iCraft85 i'll work on the js aspect of toggler tomorrow

--- a/src/creek_pirate/creek_pirate/Website/templates/static/style.css
+++ b/src/creek_pirate/creek_pirate/Website/templates/static/style.css
@@ -92,7 +92,14 @@ body {
 
 }
 
-
+div.multiple_select_checkbox {
+    width: 150px;
+    height: 60px;
+    overflow-x: hidden;
+    color: #dccfec;
+    overflow-y: auto;
+    border: 1px solid #CCCCCC;
+}
 
 @keyframes floating {
 	0% {
