--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -41,10 +41,20 @@
 				{% endfor %}
 			{% endif %}
 		</div>
+		<div style="color: #dccfec">
+            <h2>SITE TOGGLER</h2> 
+        </div>
+    <div style="color: #dccfec">
+        <div class="multiple_select_checkbox">
+            <div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1001" />crackhub</div>
+            <div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1002" />gload</div>
+            <div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1003" />gog</div>
+            <div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1004" />ova</div>
+            <div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1004" />chovka</div>
+</div>
 
-
-
-
+    </div>
+    <button onclick="javascript:validate();">Next</button>
 
 
 		<div class="footer">
