--- a/src/creek_pirate/creek_pirate/Website/templates/template/settings.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/settings.html
@@ -1,11 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='settings_style.css') }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Pirate's Creek Settings</title>	
+		<title>Pirate's Creek</title>
+	</head>
+
+	<body>
+		<div class="title">
+			<span>P</span>
+			<span>I</span>
+			<span>R</span>
+			<span>A</span>
+			<span>T</span>
+			<span>E</span>
+			<span>'</span>
+			<span>S</span>
+			<div class="spacer"> </div>
+			<span>C</span>
+			<span>R</span>
+			<span>E</span>
+			<span>E</span>
+			<span>K</span>
+		</div>
+
 	</head>
 	<body>
 	
