--- a/src/creek_pirate/creek_pirate/Website/templates/template/settings.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/settings.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='settings_style.css') }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Pirate's Creek</title>
+		<title>Settings - Pirate's Creek</title>
 	</head>
 
 	<body>
@@ -25,7 +25,24 @@
 			<span>E</span>
 			<span>K</span>
 		</div>
+		
+		<div align="center" style="border:3px solid green">
+			<div style="color: #dccfec">
+    			<h2>SITE TOGGLER</h2> 
+    		</div>
+    		<div style="color: #dccfec">
+    			<div class="multiple_select_checkbox">
+    				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1001" />crackhub</div>
+    				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1002" />gload</div>
+    				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1003" />gog</div>
+    				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1004" />ova</div>
+    				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1004" />chovka</div>
+    			</div>
+    		</div>
+    		<button onclick="javascript:validate();">Next</button>
+        </div>
 
+		
 	</head>
 	<body>
 	
