--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Settings - Pirate's Creek</title>
+		<title>Pirate's Creek</title>
 	</head>
 
 	<body>
