--- a/src/creek_pirate/creek_pirate/Website/templates/template/settings.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/settings.html
@@ -10,23 +10,18 @@
 
 	<body>
 		<div class="title">
-			<span>P</span>
-			<span>I</span>
-			<span>R</span>
-			<span>A</span>
-			<span>T</span>
-			<span>E</span>
-			<span>'</span>
 			<span>S</span>
-			<div class="spacer"> </div>
-			<span>C</span>
-			<span>R</span>
 			<span>E</span>
-			<span>E</span>
-			<span>K</span>
+			<span>T</span>
+			<span>T</span>
+			<span>I</span>
+			<span>N</span>
+			<span>G</span>
+			<span>S</span>
 		</div>
-		
-		<div align="center" style="border:3px solid green">
+		<br>
+
+		<div align="center" style="border:3px solid green" class = "wrapper">
 			<div style="color: #dccfec">
     			<h2>SITE TOGGLER</h2> 
     		</div>
