--- a/src/creek_pirate/creek_pirate/Website/templates/static/settings_style.css
+++ b/src/creek_pirate/creek_pirate/Website/templates/static/settings_style.css
@@ -10,7 +10,7 @@ body {
 	padding: 30px;
 }
 
-.title {	
+.title {
 	display: flex;
 	
 	justify-content: center;
@@ -62,6 +62,10 @@ body {
 }
 
 
+.wrapper{
+	padding: 10px;
+}
+			
 div.siteToggle {
     
 	font-size: 4px;
