fixed resutls page scroll bar

--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -9,6 +9,7 @@
 	</head>
 
 	<body>
+    <div style = "height: 1720px; line-height: 3em; overflow:scroll; border: thin #000 solid; padding: 5px;">
 		<div class="title">
 			<span>P</span>
 			<span>I</span>
@@ -93,7 +94,8 @@
 			<p>""discord server link here ""[Discord]</p>
 			<p>u/ramjithunder24 or u/Riffle_X [Reddit DMs]</p>
 		</div>
-
-		<script src="index.js"></script>
+    
+    	<script src="index.js"></script>
+        </div>	
 	</body>
 </html>
