--- a/src/creek_pirate/creek_pirate/Website/templates/static/style.css
+++ b/src/creek_pirate/creek_pirate/Website/templates/static/style.css
@@ -24,6 +24,10 @@ body {
 	animation: tilting 10s cubic-bezier(0.37, 0, 0.63, 1) infinite;
 }
 
+.footer {
+	color: #fae8e0;
+}
+
 .title span {
 	transition: font-weight 0.3s ease-in;
 	animation: floating-secondary 2.5s cubic-bezier(0.37, 0, 0.63, 1) infinite;
