--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-    <div style = " width: 100%; height: 100%; line-height: 3em; overflow:scroll; border: thin #000 solid; padding: 5px;">
+    <div style = " width: 1820px; height: 720px; line-height: 3em; overflow:scroll; border: thin #000 solid; padding: 5px;">
 		<div class="title">
 			<span>P</span>
 			<span>I</span>
@@ -66,21 +66,6 @@
 
 
 		</div>
-		<div style="color: #dccfec">
-			<h2>SITE TOGGLER</h2> 
-		</div>
-		<div style="color: #dccfec">
-			<div class="multiple_select_checkbox">
-				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1001" />crackhub</div>
-				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1002" />gload</div>
-				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1003" />gog</div>
-				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1004" />ova</div>
-				<div id="multiple_select_checkbox_choice"><input type="checkbox" name="slt_username" value="1004" />chovka</div>
-			</div>
-		</div>
-
-		<button onclick="javascript:validate();">Next</button>
-
 
 		<div class="footer">
 			<span>Contact Us</span>
