--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-    <div style = " width: 1820px; height: 720px; line-height: 3em; overflow:scroll; border: thin #000 solid; padding: 5px;">
+    <div>
 			<span>P</span>
 			<span>I</span>
 			<span>R</span>
