hyperlinked contact page

--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -67,7 +67,8 @@
 		</div>
 		<div class="footer">
 			<span>Contact Us</span>
-			<p>u/Riffle_X [Reddit DMs]</p>
+			<div class="spacer"> </div>
+			<a href="https://www.reddit.com/user/Riffle_X">u/Riffle_X [Reddit DMs]</a>
 		</div>
     
     	<script src="index.js"></script>
