--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-    <div>
+    <div class="title">
 			<span>P</span>
 			<span>I</span>
 			<span>R</span>
@@ -66,9 +66,10 @@
 
 		</div>
 		<div class="footer">
-			<span>Contact Us</span>
+			<h2>Contact Us</h2>
 			<div class="spacer"> </div>
 			<a href="https://www.reddit.com/user/Riffle_X">u/Riffle_X [Reddit DMs]</a>
+			<a href="mailto: "
 		</div>
     
     	<script src="index.js"></script>
