--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -33,7 +33,7 @@
 			</form>
 		</center>
 
-		<div class="output">
+		<div class="outputs">
 			{% if result %}
 
 			<h1 class = "output"> Crackhub </h1>
@@ -69,7 +69,9 @@
 			<h2>Contact Us</h2>
 			<div class="spacer"> </div>
 			<a href="https://www.reddit.com/user/Riffle_X">u/Riffle_X [Reddit DMs]</a>
-			<a href="mailto: "
+			<div class="spacer"> </div>
+			<a href="mailto:mystery.in.hoodie@ctemplar.com">mystery.in.hoodie [Email]</a>
+
 		</div>
     
     	<script src="index.js"></script>
