--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -48,6 +48,18 @@
 			<br>
 			{% endfor %}
 			
+			<h1 class = "output"> Scooter </h1>
+			{% for name, link in scooter %}	
+			<a href={{link}}>{{name}}</a>
+			<br>
+			{% endfor %}
+			
+			<h1 class = "output"> Gnarly </h1>
+			{% for name, link in gnarly %}	
+			<a href={{link}}>{{name}}</a>
+			<br>
+			{% endfor %}
+			
 			<h1 class = "output"> Gog Games </h1>
 			{% for name, link in gogGames %}	
 			<a href={{link}}>{{name}}</a>
