Crackhub scene works, but gload looks wonky

--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -41,6 +41,13 @@
 			<a href={{link}}>{{name}}</a>
 			<br>
 			{% endfor %}
+			
+			<h1 class = "output"> Crackhub Scene</h1>
+			{% for name, link in crackhubscene %}	
+			<a href={{link}}>{{name}}</a>
+			<br>
+			{% endfor %}
+
 
 			<h1 class = "output"> Gload </h1>
 			{% for name, link in gload %}	
