--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -59,6 +59,12 @@
 			<br>
 			{% endfor %}
 			
+			<h1 class = "output"> Old Games Download </h1>
+			{% for name, link in oldgamesdownload %}	
+			<a href={{link}}>{{name}}</a>
+			<br>
+			{% endfor %}
+			
 			<h1 class = "output"> Scooter </h1>
 			{% for name, link in scooter %}	
 			<a href={{link}}>{{name}}</a>
