did a bunch of ugprades

--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -89,6 +89,18 @@
 			<br>
 			{% endfor %}
 
+			<h1 class = "output"> Macbed </h1>
+			{% for name, link in macbed %}	
+			<a href={{link}}>{{name}}</a>
+			<br>
+			{% endfor %}
+			
+			<h1 class = "output"> Old Games Download </h1>
+			{% for name, link in oldgamesdownloadFilter %}	
+			<a href={{link}}>{{name}}</a>
+			<br>
+			{% endfor %}
+			
 			{% endif %}
 
 
@@ -97,7 +109,7 @@
 		<div class="footer">
 			<h2>Contact Us</h2>
 			<div class="spacer"> </div>
-			<a href="https://www.reddit.com/user/Riffle_X">u/Riffle_X [Reddit DMs]</a>
+			<a href="https://www.reddit.com/user/ramjithunder24">u/ramjithunder24 [Reddit DMs]</a>
 			<div class="spacer"> </div>
 			<a href="mailto:mystery.in.hoodie@ctemplar.com">mystery.in.hoodie [Email]</a>
 
