--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -106,7 +106,7 @@
 		<div class="footer">
 			<h2>Contact Us</h2>
 			<div class="spacer"> </div>
-			<a href="https://www.reddit.com/user/ramjithunder24">u/ramjithunder24 [Reddit DMs]</a>
+			<a href="https://www.reddit.com/user/Riffle_X">u/Riffle_X [Reddit DMs]</a>
 			<div class="spacer"> </div>
 			<a href="mailto:mystery.in.hoodie@ctemplar.com">mystery.in.hoodie [Email]</a>
 
