--- a/src/creek_pirate/creek_pirate/Website/templates/template/website.html
+++ b/src/creek_pirate/creek_pirate/Website/templates/template/website.html
@@ -34,15 +34,20 @@
 		</center>
 
 		<div class="outputs">
+			
+		
+			
 			{% if result %}
-
+			
+			<div class="rom">
+				<a href={{romlink}}>{{romtext}}</a>
+			</div>
+			
 				<h1 class = "output"> Gload </h1>
 				{% for name, link in gload %}	
 				<a href={{link}}>{{name}}</a>
 				<br>
 				{% endfor %}
-
-
 
 				<h1 class = "output"> Scooter </h1>
 				{% for name, link in scooter %}	
@@ -67,6 +72,19 @@
 				<br>
 				{% endfor %}
 				
+				<h1 class = "output"> Crackhub </h1>
+				{% for name, link in crackhub %}	
+				<a href={{link}}>{{name}}</a>
+				<br>
+				{% endfor %}
+				
+				<h1 class = "output"> Crackhub Scene</h1>
+				{% for name, link in crackhubscene %}	
+				<a href={{link}}>{{name}}</a>
+				<br>
+				{% endfor %}
+				
+				<div id="rom"></div>
 				<h1 class = "output"> Gog Games </h1>
 				{% for name, link in gogGames %}	
 				<a href={{link}}>{{name}}</a>
@@ -85,17 +103,7 @@
 				<br>
 				{% endfor %}
 
-				<h1 class = "output"> Crackhub </h1>
-				{% for name, link in crackhub %}	
-				<a href={{link}}>{{name}}</a>
-				<br>
-				{% endfor %}
-				
-				<h1 class = "output"> Crackhub Scene</h1>
-				{% for name, link in crackhubscene %}	
-				<a href={{link}}>{{name}}</a>
-				<br>
-				{% endfor %}
+
 
 			{% endif %}
 		</div>
