--- a/python_pirate_creek/src/creek_pirate/creek_pirate/Website/templates/static/style.css
+++ b/python_pirate_creek/src/creek_pirate/creek_pirate/Website/templates/static/style.css
@@ -51,7 +51,6 @@ body {
 
 	animation: tilting 10s cubic-bezier(0.37, 0, 0.63, 1) infinite;
 }
-
 .footer {
 	color: #fae8e0;
 	text-align: center;
@@ -68,7 +67,7 @@ body {
 	color: #fae8e0;
 }
 
-.outputs {
+.texts {
 	padding-left: 250px;
 }
 
