--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,6 +1,8 @@
 @import url("https://rsms.me/inter/inter.css");
 html {
 	font-family: "Inter var", sans-serif;
+	height: 100%;
+	width: 100%;
 }
 
 a:link {
@@ -23,6 +25,7 @@ color: #92efec;
   
   
 body {
+	color: #fae8e0;
 	margin: 0;
 	background: #13131a;
 	overflow: hidden;
@@ -32,7 +35,6 @@ body {
 	line-height: 3em; 
 	overflow:scroll;
 	padding-left: 50px;
-	border: thin #000 solid; 
 	padding: 5px;
 }
 
@@ -54,6 +56,7 @@ body {
 .footer {
 	color: #fae8e0;
 	text-align: center;
+	position: sticky;
 	padding-bottom: 20px;
 
 }
@@ -68,7 +71,7 @@ body {
 }
 
 .output {
-	color: #fae8e0;
+	color: #FAE8E0;
 }
 
 .texts {
@@ -172,3 +175,5 @@ body {
 		transform: rotate(1deg);
 	}
 }
+
+
