--- a/src/template/website.html
+++ b/src/template/website.html
@@ -3,8 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Pirate's Creek</title>
 	</head>
 
@@ -31,12 +29,12 @@
 				<input type="text" name="search" class="searchTerm" placeholder="What are you looking for?">	
 				<input type="Submit" class = "searchButton" value="">
 			</form>
+			
+			<p>Pro tip: go get water after pressing enter... it takes a bit of time;;</p>
 		</center>
 
 		<div class="outputs">
-			
-		
-			
+				
 			{% if result %}
 			
 			<div class="rom">
@@ -116,6 +114,6 @@
 
 		</div>
     
-        </div>	
+        	
 	</body>
 </html>
